added buttons to toolbar, changed toolbar layout

--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -40,21 +40,30 @@
         </div>
     </div>
 
-    <div id="toolbar-container" class="lower-during-drag">
+    <div id="toolbar-container-right" class="toolbar-container lower-during-drag">
         <button id="show-hide-gears-button" class="toolbar-button btn btn-default" data-toggle="button">
             <i class="fa fa-2x fa-eye"></i>
         </button>
-
+        <br />
+        <button id="clear-button" class="toolbar-button btn btn-default">
+            <i class="fa fa-2x fa-eraser"></i>
+        </button>
+        <br />
+        <hr id="toolbar-divider" />
         <button id="download-button" class="toolbar-button btn btn-default">
             <i class="fa fa-2x fa-download"></i>
         </button>
-
+        <br />
+        <button id="upload-button" class="toolbar-button btn btn-default">
+            <i class="fa fa-2x fa-upload"></i>
+        </button>
+        <br />
         <button id="gallery-button" class="toolbar-button btn btn-default">
             <i class="fa fa-2x fa-th"></i>
         </button>
-
-        <button id="clear-button" class="toolbar-button btn btn-default">
-            <i class="fa fa-2x fa-eraser"></i>
+        <br />
+        <button id="help-button" class="toolbar-button btn btn-default">
+            <i class="fa fa-2x fa-question"></i>
         </button>
     </div>
 
