--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -62,10 +62,69 @@
             <i class="fa fa-2x fa-th"></i>
         </button>
         <br />
-        <button id="help-button" class="toolbar-button btn btn-default">
+        <button id="help-button" class="toolbar-button btn btn-default" data-toggle="modal" data-target="#help-modal">
             <i class="fa fa-2x fa-question"></i>
         </button>
     </div>
+
+    <!-- Modals -->
+    <div class="modal fade" id="help-modal" tabindex="-1" role="dialog" aria-labelledby="help-modal-label" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                    <h4 class="modal-title" id="help-modal-label">Inspirograph Help/About</h4>
+                </div>
+                <div class="modal-body">
+                    <b>Controls and Keyboard Shortcuts</b>
+                    <br />
+                    <br />
+                    <div class="cleared"></div>
+                    <div class="column column-left">Move gear</div>
+                    <div class="column column-right">Click and drag<br />or <kbd><i class="fa fa-long-arrow-left"></i></kbd>, <kbd><i class="fa fa-long-arrow-right"></i></kbd>, <kbd><i class="fa fa-long-arrow-up"></i></kbd> and <kbd><i class="fa fa-long-arrow-down"></i></kbd></div>
+                    <div class="cleared"></div>
+                    <br />
+                    <div class="column column-left">Rotate gear in place</div>
+                    <div class="column column-right"><kbd>Ctrl</kbd> + click and drag<br />or <kbd>Ctrl</kbd> + <kbd><i class="fa fa-long-arrow-left"></i></kbd>, <kbd><i class="fa fa-long-arrow-right"></i></kbd>, <kbd><i class="fa fa-long-arrow-up"></i></kbd> or <kbd><i class="fa fa-long-arrow-down"></i></kbd></div>
+                    <div class="cleared"></div>
+                    <hr />
+                    <b>About</b>
+                    <br />
+                    <br />
+                    <div>
+                        Designed and developed by Nathan Friend, with a little help from:
+                        <div class="cleared"></div>
+                        <br />
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <ul>
+                                    <li><a href="http://www.typescriptlang.org/">TypeScript</a></li>
+                                    <li><a href="http://lesscss.org/">Less</a></li>
+                                    <li><a href="http://gruntjs.com/">Grunt</a></li>
+                                    <li><a href="http://d3js.org/">D3.js</a></li>
+                                    <li><a href="http://jquery.com/">jQuery</a></li>
+                                    <li><a href="http://getbootstrap.com/">Bootstrap</a></li>
+                                </ul>
+                            </div>
+                            <div class="col-sm-6">
+                                <ul>
+                                    <li><a href="http://fortawesome.github.io/Font-Awesome/">Font Awesome</a></li>
+                                    <li><a href="https://github.com/brandonaaron/jquery-mousewheel">jQuery Mouse Wheel</a></li>
+                                    <li><a href="http://jscrollpane.kelvinluck.com/">jScrollPane</a></li>
+                                    <li><a href="http://bgrins.github.io/spectrum/">Spectrum</a></li>
+                                    <li><a href="http://brutaldesign.github.io/swipebox/">Swipebox</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- /Modals -->
 
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="scripts/lib/linq.js"></script>
