--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -83,10 +83,10 @@
                     <div class="column column-left">Move gear</div>
                     <div class="column column-right">Click and drag<br />or <kbd><i class="fa fa-long-arrow-left"></i></kbd>, <kbd><i class="fa fa-long-arrow-right"></i></kbd>, <kbd><i class="fa fa-long-arrow-up"></i></kbd> and <kbd><i class="fa fa-long-arrow-down"></i></kbd></div>
                     <div class="cleared"></div>
-                    <br />
+                    <!--<br />
                     <div class="column column-left">Rotate gear in place</div>
                     <div class="column column-right"><kbd>Ctrl</kbd> + click and drag<br />or <kbd>Ctrl</kbd> + <kbd><i class="fa fa-long-arrow-left"></i></kbd>, <kbd><i class="fa fa-long-arrow-right"></i></kbd>, <kbd><i class="fa fa-long-arrow-up"></i></kbd> or <kbd><i class="fa fa-long-arrow-down"></i></kbd></div>
-                    <div class="cleared"></div>
+                    <div class="cleared"></div>-->
                     <hr />
                     <b>About</b>
                     <br />
@@ -184,7 +184,6 @@
     <script src="scripts/UI/custom-color-picker.js"></script>
     <script src="scripts/UI/gear-options-selector.js"></script>
     <script src="scripts/UI/color-selector.js"></script>
-    <script src="scripts/UI/download-image.js"></script>
     <script src="scripts/UI/initialize-jscrollpane.js"></script>
     <script src="scripts/UI/toolbar-controller.js"></script>
 
