shift now allows movement of gear without drawing

--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -83,6 +83,10 @@
                     <div class="column column-left">Move gear</div>
                     <div class="column column-right">Click and drag<br />or <kbd><i class="fa fa-long-arrow-left"></i></kbd>, <kbd><i class="fa fa-long-arrow-right"></i></kbd>, <kbd><i class="fa fa-long-arrow-up"></i></kbd> and <kbd><i class="fa fa-long-arrow-down"></i></kbd></div>
                     <div class="cleared"></div>
+                    <br />
+                    <div class="column column-left">Move gear without drawing</div>
+                    <div class="column column-right"><kbd>Shift</kbd> + click and drag<br />or <kbd>Shift</kbd> + <kbd><i class="fa fa-long-arrow-left"></i></kbd>, <kbd><i class="fa fa-long-arrow-right"></i></kbd>, <kbd><i class="fa fa-long-arrow-up"></i></kbd> or <kbd><i class="fa fa-long-arrow-down"></i></kbd></div>
+                    <div class="cleared"></div>
                     <!--<br />
                     <div class="column column-left">Rotate gear in place</div>
                     <div class="column column-right"><kbd>Ctrl</kbd> + click and drag<br />or <kbd>Ctrl</kbd> + <kbd><i class="fa fa-long-arrow-left"></i></kbd>, <kbd><i class="fa fa-long-arrow-right"></i></kbd>, <kbd><i class="fa fa-long-arrow-up"></i></kbd> or <kbd><i class="fa fa-long-arrow-down"></i></kbd></div>
