implemented "rotate in place" functionality

--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -87,10 +87,14 @@
                     <div class="column column-left">Move gear without drawing</div>
                     <div class="column column-right"><kbd>Shift</kbd> + click and drag<br />or <kbd>Shift</kbd> + <kbd><i class="fa fa-long-arrow-left"></i></kbd>, <kbd><i class="fa fa-long-arrow-right"></i></kbd>, <kbd><i class="fa fa-long-arrow-up"></i></kbd> or <kbd><i class="fa fa-long-arrow-down"></i></kbd></div>
                     <div class="cleared"></div>
-                    <!--<br />
+                    <br />
                     <div class="column column-left">Rotate gear in place</div>
-                    <div class="column column-right"><kbd>Ctrl</kbd> + click and drag<br />or <kbd>Ctrl</kbd> + <kbd><i class="fa fa-long-arrow-left"></i></kbd>, <kbd><i class="fa fa-long-arrow-right"></i></kbd>, <kbd><i class="fa fa-long-arrow-up"></i></kbd> or <kbd><i class="fa fa-long-arrow-down"></i></kbd></div>
-                    <div class="cleared"></div>-->
+                    <div class="column column-right">
+                        <kbd>Ctrl</kbd> + click and drag
+                        <br />or <kbd>Ctrl</kbd> + <kbd><i class="fa fa-long-arrow-left"></i></kbd>, <kbd><i class="fa fa-long-arrow-right"></i></kbd>, <kbd><i class="fa fa-long-arrow-up"></i></kbd> or <kbd><i class="fa fa-long-arrow-down"></i></kbd>
+                        <br />or <kbd>,</kbd> and <kbd>.</kbd>
+                    </div>
+                    <div class="cleared"></div>
                     <hr />
                     <b>About</b>
                     <br />
@@ -100,21 +104,25 @@
                         <div class="cleared"></div>
                         <br />
                         <div class="row">
-                            <div class="col-sm-6">
+                            <div class="col-sm-4">
                                 <ul>
                                     <li><a href="http://www.typescriptlang.org/">TypeScript</a></li>
                                     <li><a href="http://lesscss.org/">Less</a></li>
                                     <li><a href="http://gruntjs.com/">Grunt</a></li>
                                     <li><a href="http://d3js.org/">D3.js</a></li>
-                                    <li><a href="http://jquery.com/">jQuery</a></li>
-                                    <li><a href="http://getbootstrap.com/">Bootstrap</a></li>
                                 </ul>
                             </div>
-                            <div class="col-sm-6">
+                            <div class="col-sm-4">
                                 <ul>
+                                    <li><a href="http://jquery.com/">jQuery</a></li>
+                                    <li><a href="http://getbootstrap.com/">Bootstrap</a></li>
                                     <li><a href="http://fortawesome.github.io/Font-Awesome/">Font Awesome</a></li>
-                                    <li><a href="https://github.com/brandonaaron/jquery-mousewheel">jQuery Mouse Wheel</a></li>
                                     <li><a href="http://jscrollpane.kelvinluck.com/">jScrollPane</a></li>
+                                </ul>
+                            </div>
+                            <div class="col-sm-4">
+                                <ul>
+                                    <li><a href="https://github.com/brandonaaron/jquery-mousewheel">jQuery Mouse Wheel</a></li>
                                     <li><a href="http://bgrins.github.io/spectrum/">Spectrum</a></li>
                                     <li><a href="http://brutaldesign.github.io/swipebox/">Swipebox</a></li>
                                 </ul>
