implemented undo/redo

--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -94,6 +94,29 @@
                         <br />or <kbd>,</kbd> and <kbd>.</kbd>
                     </div>
                     <div class="cleared"></div>
+                    <br />
+                    <div class="column column-left">Undo</div>
+                    <div class="column column-right"><kbd>Ctrl</kbd> + <kbd>Z</kbd></div>
+                    <div class="cleared"></div>
+                    <br />
+                    <div class="column column-left">Redo</div>
+                    <div class="column column-right">
+                        <kbd>Ctrl</kbd> + <kbd>Shift</kbd> + <kbd>Z</kbd>
+                        <br />or <kbd>Ctrl</kbd> + <kbd>Y</kbd>
+                    </div>
+                    <div class="cleared"></div>
+                    <br />
+                    <div class="column column-left">Erase everything</div>
+                    <div class="column column-right"><kbd>Ctrl</kbd> + <kbd>Backspace</kbd></div>
+                    <div class="cleared"></div>
+                    <br />
+                    <div class="column column-left">Show/hide gears</div>
+                    <div class="column column-right"><kbd>G</kbd></div>
+                    <div class="cleared"></div>
+                    <br />
+                    <div class="column column-left">Download image</div>
+                    <div class="column column-right"><kbd>Ctrl</kbd> + <kbd>S</kbd></div>
+                    <div class="cleared"></div>
                     <hr />
                     <b>About</b>
                     <br />
@@ -165,6 +188,7 @@
     <script src="scripts/Interaction/change-gear-visibility.js"></script>
     <script src="scripts/Interaction/download-image.js"></script>
     <script src="scripts/Interaction/lower-UI-when-dragging.js"></script>
+    <script src="scripts/Interaction/undo-redo.js"></script>
 
     <script src="scripts/SVG/PathBuilder.js"></script>
     <script src="scripts/SVG/PathCommand.js"></script>
