added cursor tracker

--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -49,9 +49,13 @@
             <i class="fa fa-2x fa-eraser"></i>
         </button>
         <br />
+        <button id="show-hide-cursor-tracker-button" class="toolbar-button btn btn-default" data-toggle="button" style="display: none">
+            <i class="fa fa-2x fa-crosshairs"></i>
+        </button>
+        <br style="display:none;" />
         <hr id="toolbar-divider" />
         <button id="download-button" class="toolbar-button btn btn-default">
-            <i class="fa fa-2x fa-download"></i>
+            <i class="fa fa-2x fa-save"></i>
         </button>
         <br />
         <button id="upload-button" class="toolbar-button btn btn-default">
@@ -112,6 +116,10 @@
                     <br />
                     <div class="column column-left">Show/hide gears</div>
                     <div class="column column-right"><kbd>G</kbd></div>
+                    <div class="cleared"></div>
+                    <br />
+                    <div class="column column-left">Show/hide cursor tracker</div>
+                    <div class="column column-right"><kbd>T</kbd></div>
                     <div class="cleared"></div>
                     <br />
                     <div class="column column-left">Download image</div>
