--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -257,6 +257,8 @@
     <script src="scripts/Initialization/initialize-zoom.js"></script>
     <script src="scripts/Initialization/initialize-cursor-tracker.js"></script>
 
+    <script src="scripts/google-analytics.js"></script>
+
     <script src="scripts/app.js"></script>
 
 </body>
