fix in if ie comment

--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -15,7 +15,7 @@
     <script type="text/javascript">
         window.location = "old-browser.html";
     </script>
-    <!{endif]-->
+    <![endif]-->
 
 </head>
 <body class="spirograph">
