--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -1,10 +1,19 @@
 ﻿<!doctype html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
-<head>
+<head prefix="og: http://ogp.me/ns#">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Inspirograph" />
+    <meta property="og:description" content="A digital replica of the classic Spirograph toy. Written in TypeScript, using D3.js." />
+
+    <meta property="og:image" content="http://nathanfriend.com/inspirograph/link-thumbnail.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="1568" />
+    <meta property="og:image:height" content="1008" />
 
     <link href="styles/app.css" rel="stylesheet" />
     <link class="dom_munger-ignore" rel="shortcut icon" href="favicon.ico" />
