--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -72,123 +72,128 @@
             <i class="fa fa-2x fa-save"></i>
         </button>
         <br />
-        <button id="upload-button" class="toolbar-button btn btn-default">
+        <button id="upload-button" class="toolbar-button btn btn-default disabled">
             <i class="fa fa-2x fa-upload"></i>
         </button>
         <br />
         <button id="gallery-button" class="toolbar-button btn btn-default">
             <i class="fa fa-2x fa-th"></i>
         </button>
+        <br style="display:none;" />
+        <hr id="toolbar-divider" />
+        <button id="keyboard-shortcuts-button" class="toolbar-button btn btn-default" data-toggle="modal" data-target="#keyboard-shortcuts-modal">
+            <i class="fa fa-2x fa-keyboard-o"></i>
+        </button>
         <br />
-        <button id="help-button" class="toolbar-button btn btn-default" data-toggle="modal" data-target="#help-modal">
+        <button id="about-button" class="toolbar-button btn btn-default" data-toggle="modal" data-target="#about-modal">
             <i class="fa fa-2x fa-question"></i>
         </button>
     </div>
 
     <!-- Modals -->
-    <div class="modal fade" id="help-modal" tabindex="-1" role="dialog" aria-labelledby="help-modal-label" aria-hidden="true">
+    <div class="modal fade" id="about-modal" tabindex="-1" role="dialog" aria-labelledby="about-modal-label" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                    <h4 class="modal-title" id="help-modal-label">Inspirograph Help/About</h4>
+                    <h4 class="modal-title" id="about-modal-label">About Inspirograph</h4>
                 </div>
-                <div class="modal-body">
-                    <ul class="nav nav-tabs" role="tablist">
-                        <li class="active"><a href="#controls" role="tab" data-toggle="tab">Controls and Keyboard Shortcuts</a></li>
-                        <li><a href="#help-about" role="tab" data-toggle="tab">About Inspirograph</a></li>
-                    </ul>
-
-                    <div class="tab-content">
-                        <div class="tab-pane active" id="controls">
-                            <p id="mac-users">Mac users: substitute <kbd>⌘ </kbd> for <kbd>Ctrl</kbd></p>
-                            <table class="table table-striped">
-                                <tbody>
-                                    <tr>
-                                        <td>Move gear</td>
-                                        <td>Click and drag<br />or <kbd><i class="fa fa-long-arrow-left"></i></kbd>, <kbd><i class="fa fa-long-arrow-right"></i></kbd>, <kbd><i class="fa fa-long-arrow-up"></i></kbd> and <kbd><i class="fa fa-long-arrow-down"></i></kbd></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Move gear without drawing</td>
-                                        <td><kbd>Shift</kbd> + click and drag<br />or <kbd>Shift</kbd> + <kbd><i class="fa fa-long-arrow-left"></i></kbd>, <kbd><i class="fa fa-long-arrow-right"></i></kbd>, <kbd><i class="fa fa-long-arrow-up"></i></kbd> or <kbd><i class="fa fa-long-arrow-down"></i></kbd></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Rotate gear in place</td>
-                                        <td>
-                                            <kbd>Ctrl</kbd> + click and drag
-                                            <br />or <kbd>,</kbd> and <kbd>.</kbd>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>Undo</td>
-                                        <td><kbd>Ctrl</kbd> + <kbd>Z</kbd></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Redo</td>
-                                        <td>
-                                            <kbd>Ctrl</kbd> + <kbd>Shift</kbd> + <kbd>Z</kbd>
-                                            <br />or <kbd>Ctrl</kbd> + <kbd>Y</kbd>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>Erase everything</td>
-                                        <td><kbd>Ctrl</kbd> + <kbd>Backspace</kbd></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Show/hide gears</td>
-                                        <td><kbd>G</kbd></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Show/hide cursor tracker</td>
-                                        <td><kbd>T</kbd></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Download image</td>
-                                        <td><kbd>Ctrl</kbd> + <kbd>S</kbd></td>
-                                    </tr>
-                                </tbody>
-                            </table>
-
-
+                <div id="about-content">
+                    Designed and developed by Nathan Friend, with a little help from:
+                    <div class="cleared"></div>
+                    <br />
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <ul>
+                                <li><a href="http://www.typescriptlang.org/" target="_blank">TypeScript</a></li>
+                                <li><a href="http://lesscss.org/" target="_blank">Less</a></li>
+                                <li><a href="http://gruntjs.com/" target="_blank">Grunt</a></li>
+                                <li><a href="http://d3js.org/" target="_blank">D3.js</a></li>
+                            </ul>
                         </div>
-                        <div class="tab-pane" id="help-about">
-                            <br />
-                            <div>
-                                Designed and developed by Nathan Friend, with a little help from:
-                                <div class="cleared"></div>
-                                <br />
-                                <div class="row">
-                                    <div class="col-sm-4">
-                                        <ul>
-                                            <li><a href="http://www.typescriptlang.org/" target="_blank">TypeScript</a></li>
-                                            <li><a href="http://lesscss.org/" target="_blank">Less</a></li>
-                                            <li><a href="http://gruntjs.com/" target="_blank">Grunt</a></li>
-                                            <li><a href="http://d3js.org/" target="_blank">D3.js</a></li>
-                                        </ul>
-                                    </div>
-                                    <div class="col-sm-4">
-                                        <ul>
-                                            <li><a href="http://jquery.com/" target="_blank">jQuery</a></li>
-                                            <li><a href="http://getbootstrap.com/" target="_blank">Bootstrap</a></li>
-                                            <li><a href="http://fortawesome.github.io/Font-Awesome/" target="_blank">Font Awesome</a></li>
-                                            <li><a href="http://jscrollpane.kelvinluck.com/" target="_blank">jScrollPane</a></li>
-                                        </ul>
-                                    </div>
-                                    <div class="col-sm-4">
-                                        <ul>
-                                            <li><a href="https://github.com/brandonaaron/jquery-mousewheel" target="_blank">jQuery Mouse Wheel</a></li>
-                                            <li><a href="http://bgrins.github.io/spectrum/" target="_blank">Spectrum</a></li>
-                                            <li><a href="http://brutaldesign.github.io/swipebox/" target="_blank">Swipebox</a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                                <div class="cleared"></div>
-                                <br />
-                                Complete source can be found on Github:
-                                <a href="https://github.com/nfriend/inspirograph" target="_blank">https://github.com/nfriend/inspirograph</a>
-                            </div>
+                        <div class="col-sm-4">
+                            <ul>
+                                <li><a href="http://jquery.com/" target="_blank">jQuery</a></li>
+                                <li><a href="http://getbootstrap.com/" target="_blank">Bootstrap</a></li>
+                                <li><a href="http://fortawesome.github.io/Font-Awesome/" target="_blank">Font Awesome</a></li>
+                                <li><a href="http://jscrollpane.kelvinluck.com/" target="_blank">jScrollPane</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-4">
+                            <ul>
+                                <li><a href="https://github.com/brandonaaron/jquery-mousewheel" target="_blank">jQuery Mouse Wheel</a></li>
+                                <li><a href="http://bgrins.github.io/spectrum/" target="_blank">Spectrum</a></li>
+                                <li><a href="http://brutaldesign.github.io/swipebox/" target="_blank">Swipebox</a></li>
+                            </ul>
                         </div>
                     </div>
+                    <div class="cleared"></div>
+                    <br />
+                    Complete source can be found on Github:
+                    <a href="https://github.com/nfriend/inspirograph" target="_blank">https://github.com/nfriend/inspirograph</a>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="keyboard-shortcuts-modal" tabindex="-1" role="dialog" aria-labelledby="keyboard-shortcuts-modal-label" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                    <h4 class="modal-title" id="keyboard-shortcuts-modal-label">Inspirograph Keyboard Shortcuts</h4>
+                </div>
+                <div class="modal-body">
+                    <p id="mac-users">Mac users: substitute <kbd>⌘ </kbd> for <kbd>Ctrl</kbd></p>
+                    <table class="table table-striped">
+                        <tbody>
+                            <tr>
+                                <td>Move gear</td>
+                                <td>Click and drag<br />or <kbd><i class="fa fa-long-arrow-left"></i></kbd>, <kbd><i class="fa fa-long-arrow-right"></i></kbd>, <kbd><i class="fa fa-long-arrow-up"></i></kbd> and <kbd><i class="fa fa-long-arrow-down"></i></kbd></td>
+                            </tr>
+                            <tr>
+                                <td>Move gear without drawing</td>
+                                <td><kbd>Shift</kbd> + click and drag<br />or <kbd>Shift</kbd> + <kbd><i class="fa fa-long-arrow-left"></i></kbd>, <kbd><i class="fa fa-long-arrow-right"></i></kbd>, <kbd><i class="fa fa-long-arrow-up"></i></kbd> or <kbd><i class="fa fa-long-arrow-down"></i></kbd></td>
+                            </tr>
+                            <tr>
+                                <td>Rotate gear in place</td>
+                                <td>
+                                    <kbd>Ctrl</kbd> + click and drag
+                                    <br />or <kbd>,</kbd> and <kbd>.</kbd>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Undo</td>
+                                <td><kbd>Ctrl</kbd> + <kbd>Z</kbd></td>
+                            </tr>
+                            <tr>
+                                <td>Redo</td>
+                                <td>
+                                    <kbd>Ctrl</kbd> + <kbd>Shift</kbd> + <kbd>Z</kbd>
+                                    <br />or <kbd>Ctrl</kbd> + <kbd>Y</kbd>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Erase everything</td>
+                                <td><kbd>Ctrl</kbd> + <kbd>Backspace</kbd></td>
+                            </tr>
+                            <tr>
+                                <td>Show/hide gears</td>
+                                <td><kbd>G</kbd></td>
+                            </tr>
+                            <tr>
+                                <td>Show/hide cursor tracker</td>
+                                <td><kbd>T</kbd></td>
+                            </tr>
+                            <tr>
+                                <td>Download image</td>
+                                <td><kbd>Ctrl</kbd> + <kbd>S</kbd></td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
 
                 <div class="modal-footer">
