started work on playback recording

--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -276,6 +276,9 @@
     <script src="scripts/Initialization/initialize-zoom.js"></script>
     <script src="scripts/Initialization/initialize-cursor-tracker.js"></script>
 
+    <script src="scripts/Playback/Action.js"></script>
+    <script src="scripts/Playback/ActionRecorder.js"></script>
+
     <script src="scripts/google-analytics.js"></script>
 
     <script src="scripts/app.js"></script>
