app states are now saving

--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -260,6 +260,7 @@
     <script src="scripts/Shapes/BeamRotater.js"></script>
     <script src="scripts/Shapes/Beam.js"></script>
 
+    <script src="scripts/UI/Color.js"></script>
     <script src="scripts/UI/custom-color-picker.js"></script>
     <script src="scripts/UI/gear-options-selector.js"></script>
     <script src="scripts/UI/color-selector.js"></script>
@@ -275,6 +276,8 @@
     <script src="scripts/Initialization/initialize-svg.js"></script>
     <script src="scripts/Initialization/initialize-zoom.js"></script>
     <script src="scripts/Initialization/initialize-cursor-tracker.js"></script>
+
+    <script src="scripts/state.js"></script>
 
     <script src="scripts/Playback/Action.js"></script>
     <script src="scripts/Playback/ActionRecorder.js"></script>
