switched gallery to imgur instead of web server

--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -95,6 +95,10 @@
             <i class="fa fa-2x fa-mobile"></i>
         </button>
         <div class="cleared"></div>
+        <button id="test-button" class="toolbar-button btn btn-default dom_munger-remove">
+            <i class="fa fa-2x fa-flask"></i>
+        </button>
+        <div class="cleared dom_munger-remove"></div>
     </div>
 
     <!-- Modals -->
