reworked gallery build, finished imgur integration

--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -78,9 +78,9 @@
             <i class="fa fa-2x fa-upload"></i>
         </div>
         <div class="cleared"></div>
-        <button id="gallery-button" class="toolbar-button btn btn-default">
+        <a id="gallery-button" href="./gallery/" class="toolbar-button btn btn-default">
             <i class="fa fa-2x fa-th"></i>
-        </button>
+        </a>
         <div class="cleared"></div>
         <hr class="toolbar-divider" />
         <button id="keyboard-shortcuts-button" class="toolbar-button btn btn-default" data-toggle="modal" data-target="#keyboard-shortcuts-modal">
@@ -247,9 +247,6 @@
     <script src="bower_components/spectrum/spectrum.js"></script>
 
     <script src="scripts/test-for-mobile.js"></script>
-
-    <script src="are-gallery-submissions-paused.js" class="dom_munger-ignore"></script>
-
     <script src="scripts/globals.js"></script>
     <script src="scripts/EventAggregator.js"></script>
     <script src="scripts/dimensions.js"></script>
