--- a/Spirograph/gallery/index.html
+++ b/Spirograph/gallery/index.html
@@ -4,11 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
-    <link href="lib/jquery-swipebox/css/swipebox.min.css" rel="stylesheet" />
-    <link class="dom_munger-ignore" rel="shortcut icon" href="favicon.ico" />
-    <link href="styles/gallery.css" rel="stylesheet" />
+
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' class="dom_munger-ignore" />
+    <link class="dom_munger-ignore" rel="shortcut icon" href="../favicon.ico" />
+
+    <link href="styles/app.css" rel="stylesheet" />
+
     <title>Inspirograph</title>
 </head>
 
@@ -21,21 +22,15 @@
             </div>
         </div>
     </div>
+    <div id="waiting-overlay">
+        <i class="fa fa-gear fa-spin fa-5x" style="color: #555"></i>
+    </div>
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script src="lib/jquery-swipebox/js/jquery.swipebox.min.js"></script>
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="bower_components/swipebox/src/js/jquery.swipebox.min.js"></script>
+    <script src="scripts/query-string.js"></script>
+    <script src="scripts/format-date.js"></script>
     <script src="scripts/gallery.js"></script>
-    <script>
-        (function (i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date(); a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-
-        ga('create', 'UA-36351579-1', 'auto');
-        ga('send', 'pageview');
-
-    </script>
+    <script src="scripts/google-analytics.js"></script>
 </body>
 </html>
